--- a/projeto/backend/package.json
+++ b/projeto/backend/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "backend",
+  "name": "meu-projeto",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node dist/server.js",
+    "build": "tsc",
+    "dev": "ts-node src/server.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.15"
+    "mongoose": "^8.8.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.10",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^16.0.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
